# discord.rs

./: .gitignore  Cargo.toml  README.md
crates/builders/: Cargo.toml
crates/builders/src/: component.rs  embed.rs  interaction.rs  lib.rs  message.rs
crates/cache/: Cargo.toml
crates/cache/src/: cache.rs  lib.rs  managers.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  context.rs  error.rs  intents.rs  lib.rs  snowflake.rs  traits.rs
crates/examples/: Cargo.toml
crates/examples/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  manager.rs
crates/http/: Cargo.toml
crates/http/src/: client.rs  error.rs  lib.rs  ratelimit.rs  routing.rs
crates/model/: Cargo.toml
crates/model/src/: attachment.rs  channel.rs  component.rs  embed.rs  emoji.rs  event.rs  gateway.rs  guild.rs  interaction.rs  lib.rs  member.rs  message.rs  presence.rs  reaction.rs  role.rs  sticker.rs  user.rs
crates/model/tests/: serialization.rs
crates/sharding/: Cargo.toml
crates/sharding/src/: lib.rs
crates/voice/: Cargo.toml
src/: client.rs  collector.rs  lib.rs
