[package]
name = "discord_rs_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5"
discord_rs_model = { path = "../model" }
discord_rs_core = { path = "../core" }
discord_rs_http = { path = "../http" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
