[package]
name = "discord_rs_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
url = "2.4"
discord_rs_core = { path = "../core" }
discord_rs_model = { path = "../model" }
rand = "0.8"
flate2 = { version = "1.0", optional = true }

[features]
default = []
gateway_zlib = ["flate2"]
