[package]
name = "discord_rs_http"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
discord_rs_core = { path = "../core" }
async-trait = "0.1"
dashmap = "5.5"
url = "2.5"
